# recovar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  REVIEW.md  SLURM_OUTPUT_FIX.md  STATE.md  adapted_cryoDRGN_viz.ipynb  analyze.py  angle_refinement_test.ipynb  bench_convergence.py  bench_convergence.slurm  bench_gridded_alpha.py  bench_gridded_alpha.slurm  bench_mstep.py  bench_precond_study.py  bench_precond_study.slurm  bench_precond_study_nonexcl.slurm  bench_soft_alpha.py  bench_soft_alpha.slurm  bench_soft_alpha_256_scaled.py  bench_soft_alpha_256_scaled.slurm  challenge2_densities.pkl  compute_embedding.py  compute_state.py  compute_trajectory.py  crun_recovar_workload.sh  crun_recovar_workload_della.sh  estimate_conformational_density.py  estimate_stable_states.py  ewald_test.ipynb  ewald_test_cg.ipynb  (+36 more)
.claude/: settings.json
.claude/agents/: gui-qa.md
.claude/hooks/: autoformat.sh  block-push-to-dev-main.sh  protect-baselines.sh
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude.yml  docs.yml  fast-marching.yml  release.yml  wheels.yml
CLAUDE/: index.html
_agent_scratch/: aggregate_spike128_ctf_noise0p1_em_sweep.py  package_three_mode_oracle_volumes.py  pose_embedding_error_map.py  run_spike128_raw_index_gtnoise.py  submit_spike128_2m_deconv_report_resume_batched_20260515.sbatch  submit_spike128_ctf_noise0p1_basis_reg_hardcases.sbatch  submit_spike128_ctf_noise0p1_basis_reg_sweep.sbatch  submit_spike128_ctf_noise0p1_localpoly_em_iter_reg_sweep.sbatch  submit_spike128_ctf_noise0p1_localpoly_em_sweep.sbatch  submit_spike128_ctf_noise1_narrow_sweep.sbatch  submit_spike128_ctf_noise1_setup.sbatch  submit_spike128_raw_index_noctf_noise0p01_200k_emb100.sbatch  submit_spike128_raw_index_noctf_noise0p01_20k_emb10.sbatch  submit_spike128_raw_index_noctf_noise0p1_30k_gtnoise.sbatch  submit_spike128_raw_index_noctf_noise1e4_30k_cleanemb.sbatch  submit_spike_consistency_n10_1M_cryoem_tmp_20260515.sbatch
analysis/: README.md  cuda_api_summary.txt  gpu_kernel_summary.txt  home_cleanup_suggestions.md  memory_transfer_summary.txt  performance_summary.md
benchmarks/: variance_memory_realistic_2026-03-05.md
commands/: junk_particle_detection.py  run_test_outliers_pipeline.py
docs/: CLAUDE.md  em_vdam_postmerge_guard.md  index.md  relion_local_engine_refactor.md  relion_parity_commit_audit.md  troubleshooting.md
docs/advanced/: conformational-density.md  cryo-et.md  multi-gpu.md  outlier-detection.md
docs/getting-started/: docker.md  installation.md  quickstart.md  testing.md
docs/guide/: analysis.md  codex-workflow.md  conformational-density.md  cryo-et.md  downsampling.md  external-embeddings.md  extracting-subsets.md  gui.md  input-data.md  masks.md  outlier-detection.md  pipeline.md  tutorial-cryo-et.md  tutorial.md
docs/math/: ab_initio_initial_model_algorithm.md  comparison_highsnr_results.md  (+67 more)
examples/: README.md  STUDENT_GUIDE.md  bench_sketched_normal.py  run_10028.slurm  run_10076.slurm  run_10180.slurm  sketched_normal_demo.ipynb  sketched_normal_operator_demo.py
multinode_covariance_bench/: HYBRID_MULTINODE_IMPLEMENTATION_PLAN.md  PROTOTYPE_README.md  README.md  analyze_prototype_results.py  prototype_frequency_parallel.py  test_prototype.sh
notebooks/: output_visualization.ipynb
recovar/: CLAUDE.md  EM_iteration.py  __init__.py  _fast_marching_native.cpp  _version.py  adaptive_homogeneous.py  adaptive_kernel_discretization.py  adaptive_kernel_two.py  command_line.py  config.py  configs.py  constants.py  core.py  core_ctf.py  core_forward.py  core_geometry.py  core_indexing.py  core_slicing.py  covariance_core.py  covariance_estimation.py  cryo_dataset.py  cryodrgn_load.py  cryodrgn_mrcfile.py  cryodrgn_source.py  cryodrgn_starfile.py  cryojax_map_coordinates.py  csparc_bind.py  cubic_interpolation.py  cuda_backproject.py  dataset.py  deconvolve_density.py  downsample.py  embedding.py  ewald.py  fourier_transform_utils.py  generate_synthetic_molecule.py  heterogeneity_volume.py  homogeneous.py  image_assignment.py  image_loader.py  (+30 more)
recovar/relion_bind/: CMakeLists.txt  __init__.py  backprojector_bind.cpp  build.py  conversions.py  ctf_bind.cpp  estep_bind.cpp  fftw_bind.cpp  initialmodel_bind.cpp  module.cpp  obs_model_stub.cpp  projector_bind.cpp  sampling_bind.cpp
scripts/: CLEANUP_HOME.md  README_TEST_SCRIPTS.md  __init__.py  aggregate_memory_calibration.py  analyze_local_parity_dumps.py  api_smoke.py  audit_pickle_usage.py  audit_prior_noise.py  bench_5k_one_iter.sh  bench_contrast_posterior.py  bench_cuda_cubic.py  bench_half_image_jax.py  benchmark_dense_kclass_from_ppca_init.py  benchmark_fourier_window.py  benchmark_half_spectrum.py  benchmark_ppca_fused_block_guard.py  benchmark_ppca_vs_kclass_timing.py  benchmark_relion_pose_mstep.py  build_container.sh  build_recovar_sif.sh  calibrate_memory_planner.py  capture_metrics_baseline.py  cascade_debug.py  check_changed_python.sh  check_gt_pose_recovery_exact_candidates.py  check_ppca_synthetic_recovery.py  compare_iter0_noise.py  compare_iter1_bpref_accum.py  compare_junk_detection.py  compare_no_ctf_artifact.py  compare_old_new_simulator.py  compare_pipeline_same_dataset.py  compare_pose_refinement_runs.py  compare_recovar_relion_autorefine.py  compare_single_iter_parity.py  compare_test_results.py  compare_vs_relion.py  compute_ppca_best_pose_embedding.py  convert_pipeline_output_for_old_code.py  crun_recovar_workload_della.sh  (+130 more)
search/: search_index.json
stacking_bench/: OPTIMIZATION_SUMMARY.md  README.md  analyze_profile.py  benchmark_results.json  benchmark_results_async.json  benchmark_stack.py  profile_analysis.json
stylesheets/: extra.css
tests/: CLAUDE.md  README.md  bench_cuda_max_r.py  bench_vs_relion.cu  conftest.py  test_backproject_hermitian.py  test_cuda_max_r.py  test_phase_randomized_fsc.py  test_relion_interp.py
troubleshooting/: index.html
(+4531 files in other folders)
