[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "recovar"
dynamic = ["version"]
authors = [
  { name = "Marc Aurele Gilles", email = "gilles@princeton.edu" }
]
description = "RECOVAR cryo-EM heterogeneity analysis"
readme = "README.md"
license = { text = "Princeton University Academic/Non-Commercial License (see LICENSE file)" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux"
]

dependencies = [
    "dataframe_image==0.2.7",
    "equinox==0.13.4",
    "finufft==2.3.1",
    "grain==0.2.16",
    "healpy==1.18.0",
    "jax==0.9.0.1",
    "jax_finufft==0.1.0",
    "jaxopt==0.8.5",
    "jaxtyping==0.2.38",
    "kneed==0.8.5",
    "lineax==0.0.7",
    "matplotlib==3.10.0",
    "matplotlib_scalebar==0.9.0",
    "more_itertools==10.6.0",
    "mrcfile==1.5.4",
    "numpy<2.3.0",
    "optax==0.2.7",
    "pandas==2.2.3",
    "plotly==6.0.0",
    "scikit-fmm",
    "scikit-image",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "starfile==0.5.11",
    "typing_extensions==4.12.2",
    "umap-learn[plot]",
]

[project.optional-dependencies]
interactive = [
    "cufflinks",
    "ipykernel",
    "ipython==8.12.3",
    "ipywidgets==8.1.5",
    "jupyterlab",
    "notebook<7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/ma-gilles/recovar"

[tool.setuptools.packages.find]
where = ["."]
include = ["recovar*"]

[tool.setuptools_scm]
write_to = "recovar/_version.py"
local_scheme = "no-local-version"

[project.scripts]
recovar = "recovar.command_line:main_commands"

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true
filterwarnings = [
  "default::DeprecationWarning",
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
