[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2", "numpy<2.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recovar"
dynamic = ["version"]
authors = [
  { name = "Marc Aurele Gilles", email = "gilles@princeton.edu" }
]
description = "RECOVAR cryo-EM heterogeneity analysis"
readme = "README.md"
license = { text = "Princeton University Academic/Non-Commercial License (see LICENSE file)" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux"
]

# --- Dependencies use minimum bounds for maximum compatibility ---
# For exact reproducible environments, use pixi (pixi.lock) or
# pip install -r requirements-lock.txt
dependencies = [
    "dataframe_image>=0.2.7",
    "equinox>=0.13.0",
    "finufft>=2.3.0",
    "grain>=0.2.0",
    "healpy>=1.17.0",
    "jax>=0.9.0,<0.10",
    "jax_finufft>=0.1.0",
    "jaxopt>=0.8.0",
    "jaxtyping>=0.2.30",
    "kneed>=0.8.0",
    "lineax>=0.0.7",
    "matplotlib>=3.9.0",
    "matplotlib_scalebar>=0.9.0",
    "more_itertools>=10.0.0",
    "mrcfile>=1.5.0",
    "numpy>=2.0.0,<2.3.0",
    "optax>=0.2.0",
    "pandas>=2.2.0",
    "plotly>=6.0.0",
    "scikit-fmm>=2024.0.0",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.0",
    "starfile>=0.5.0",
    "typing_extensions>=4.10.0",
    "umap-learn[plot]>=0.5.5",
]

[project.optional-dependencies]
# GPU acceleration (most users want this)
cuda = [
    "jax[cuda12]>=0.9.0,<0.10",
]
# Interactive notebooks
interactive = [
    "cufflinks",
    "ipykernel",
    "ipython>=8.12.0",
    "ipywidgets>=8.1.0",
    "jupyterlab",
    "notebook<7",
]
# Web GUI
gui = [
    "flask>=3.0",
]
# Development and testing
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0",
]
# Everything
all = [
    "recovar[cuda,interactive,gui,dev]",
]

[project.urls]
Homepage = "https://github.com/ma-gilles/recovar"
Documentation = "https://ma-gilles.github.io/recovar"
Issues = "https://github.com/ma-gilles/recovar/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["recovar*"]

[tool.setuptools_scm]
write_to = "recovar/_version.py"
local_scheme = "no-local-version"
fallback_version = "1.0.0b1"

[project.scripts]
recovar = "recovar.command_line:main_commands"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pyflakes, pycodestyle, isort
ignore = [
    "E501",   # line too long — handled by formatter, not lint
    "E741",   # ambiguous variable name (common in math code: l, O, I)
    "F841",   # local variable assigned but never used — noisy during dev
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true
filterwarnings = [
  "default::DeprecationWarning",
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
